[tool.poetry]
name = "rad-ecg"
version = "0.1.0"
description = "This software is meant to process single lead ECG CAMS"
authors = ["Landcruiser87 <andyheroy@gmail.com>"]
readme = "README.md"
packages = [{include = "rad_ecg", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.0"
pandas = "^1.5.0"
rich = "^13.8.0"
wfdb = "^4.1.2"
scipy = "^1.14.0"
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"