[tool.poetry]
name = "rad-ecg"
version = "0.1.0"
description = "This software is meant to process single lead ECG CAMS"
authors = ["Landcruiser87 <andyheroy@gmail.com>"]
readme = "README.md"
packages = [{include = "rad_ecg", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
numpy = ">=2.0"
pandas = "^2.0.0"
rich = "^13.8.0"
wfdb = "^4.1.2"
scipy = "^1.14.0"
matplotlib = ">=3.10"
google-cloud-storage = "^2.18.2"
stumpy = "^1.13.0"
kneed = "^0.8.5"
scikit-learn = "^1.7.1"
seaborn = "^0.13.2"
xgboost = "^3.0.3"
pyedflib = "^0.1.42"
adi-reader = "^0.0.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"